# solvis-ha-integration

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/solvis_remote/: __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  image.py  manifest.json  select.py  sensor.py
custom_components/solvis_remote/translations/: de.json  en.json
tests/: conftest.py  test_client_cgi.py  test_client_decode.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_image.py  test_init.py  test_select.py
tests/fixtures/: solvis_payload_ok.xml  solvis_payload_short.xml
